@@ -297,6 +297,7 @@ namespace MCDawn
             //all.Add(new CmdReflection());
             all.Add(new CmdReport());
             all.Add(new CmdSetWomPass());
+            all.Add(new CmdHAllowGuns());
 
             //all.Add(new Commands.GameControl.CmdGame());
 
